version 1.9.15, in progress
- Introduce a new native binary datafile format, the gdtb file
  (zipped XML metadata plus binary values)
- Add new functions: bread(), bwrite(), substr(), easterday()
- "summary" command: add --weights option
- "tabprint" command: add --csv option
- "fdjac" function: provide choice of algorithm	
- Enable use of arrays in the SFMT random number generator
- Enable use of value labels (if any) in factorized boxplots
- Enable use of named lists in the GMM() and GMMlevel() 
  parameter-groups for the "dpanel" and "arbond" commands
- Print out alternative definition of R^2 in FE linear panel 
  data models
- Add choice of compression level when saving data in native
  gdt format
- Stata dta import: handle (illegal!) non-ASCII characters in
  variable names
- X-12-ARIMA interface: support the new X-13-ARIMA-SEATS as an
  alternative
- Fix bug: incorrect plot header when the --radians option was
  given with the "pergm" command
- Fix bug: the --test-down option to "coint" was not working
  as advertised
- Fix bug (?): the final regression in "coint" (Engle-Granger
  test) could end up using a different sample range depending
  on whether or not the --skip-df option was given
- Fix bug: incorrect handling of Poisson regression when the
  specification does not include an intercept term
- Fix bug: bad handing of decimal comma in context of the --by
  option
- Fix bug: incorrect treatment of big-endian SPSS "sav" files
  on data import
- Fix bug: the auxiliary regression for White's test should
  contain a constant even if the model to be tested does not
- Fix bug: wrong starting date being sent to x12a/x13as for
  monthly data starting in October
- Fix bug: score calculation for random-effects probit was 
  incorrect
- Fix bug: incorrect estimates when the --robust option was
  used with the "wls" command
- Fix bugs 181, 182
- Internals: add support for multiple, independent PRNGs
- configure script: add an option --disable-www which drops